# CodeWeaver

./: .gitignore  1.txt  AI.py  README.md  analyze_codebase.py  code_assistant.py  pyproject.toml  query.py  read.py  requirements.txt
.ipynb_checkpoints/: test-checkpoint.py
CodeWeaver/parser/: __init__.py  code_parser.py  code_parser_cpp.py  code_parser_java.py  code_parser_py.py
CodeWeaver/storage/: __init__.py  code_storage.py
CodeWeaver/utils/: id_generator.py
CodeWeaver/vectorizer/: __init__.py  code_vectorizer.py
examples/: example.py
examples/style/: model.py  utils.py
src/parser/: code_parser.py
src/parser/.ipynb_checkpoints/: code_parser-checkpoint.py
src/storage/: code_storage.py
src/vectorizer/: code_vectorizer.py
src/vectorizer/.ipynb_checkpoints/: code_vectorizer-checkpoint.py
